# hyperstate

./: .gitignore  .readthedocs.yaml  LICENSE-MIT  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: black.yaml  mypy.yaml  publish.yaml  tests.yaml
docs/source/: api.rst  conf.py  index.rst  usage.rst
examples/basic-config/: config.ron  main.py
examples/basic_config/: main.py
examples/stateful/: main.py
hyperstate/: __init__.py  command.py  hyperstate.py  lazy.py  msgpack_torch.py  schedule.py  serde.py  test_checkpoint.py  test_override.py
hyperstate/schema/: help.py  namedtuple_utils.py  rewrite_rule.py  schema_change.py  schema_checker.py  test_dump_schema.py  test_help.py  test_schema_evolution.py  types.py  versioned.py
